--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,14 @@
 .cursor-pointer{ 
   cursor: pointer;
 }
+
+.button {
+  background-color: black; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-flex;
+  font-size: 16px;
+}
