--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,12 @@
 .padding-10px{ 
   padding:10px;
 }
-.width-max{ 
- 
+.width-max, a:link, a:visited{ 
+  background-color: #000000;
+  color: white;
   display: flex;
-
+  text-decoration: none;
+  padding: 5px, 10px;
   margin-left:-5px
   
 }
@@ -21,6 +23,7 @@
 }
 .width-max > h2{ 
   margin-left: 1rem;
+  background-color: black;
 }
 
 .flex-across{ 
@@ -72,3 +75,5 @@
   background-image:url('https://tbcdn.talentbrew.com/company/45483/cms/page/job/plume.png');
   background-position:center top ;
 }
+
+
