--- a/src/about.css
+++ b/src/about.css
@@ -1,5 +1,5 @@
 .about-container {
-    
+     flex-grow: initial;
     font-family: Arial, sans-serif;
   }
   
@@ -32,7 +32,11 @@
     text-align: center;
   }
   
-  img {
-    align-content: center;
-    width: fit-content;
+  .b-img {
+    background-image: url('https://media.istockphoto.com/id/1460172015/photo/businessmen-making-handshake-with-partner-greeting-dealing-merger-and-acquisition-business.jpg?s=612x612&w=0&k=20&c=IyQrIahedSW3WKsHSNsqtvX8dnzI1augnrtRrVeN3Dw=');
+    background-size: stretch;    /* Ensures the image covers the entire container */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent image repetition */
+    height: 100vh;  /* Full height of the viewport */
+    width: 100%;    /* Full width of the viewport */
   }
